@@ -431,7 +431,7 @@ static apr_status_t fs_fload(void **pvalue, md_store_fs_t *s_fs, const char *fpa
                 rv = APR_ENOTIMPL;
                 break;
         }
-        md_log_perror(MD_LOG_MARK, MD_LOG_TRACE2, rv, ptemp, 
+        md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, ptemp, 
                       "loading type %d from %s", vtype, fpath);
     }
     else { /* check for existence only */
